--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,7 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
 }
+
+bootRun {
+    addResources = true
+}
