--- a/package.json
+++ b/package.json
@@ -12,24 +12,21 @@
   "homepage": "https://bitbucket.org/martomarchev/gated#readme",
   "author": "Martin Hristov",
   "license": "Apache-2.0",
-  "dependencies": {
-    "history": "^4.5.1",
-    "material-ui": "^0.16.7",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router": "^4.0.0-2",
-    "react-tap-event-plugin": "^2.0.1",
-    "rest": "^2.0.0",
-    "webpack": "^1.14.0"
-  },
   "scripts": {
     "watch": "webpack --watch -d"
   },
+  "dependencies": {
+    "rest": "^2.0.0",
+    "vue": "^2.1.0"
+  },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0"
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
+    "vue-loader": "^10.0.0",
+    "vue-template-compiler": "^2.1.0",
+    "webpack": "^2.2.0"
   }
 }
