--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "rest": "^2.0.0",
-    "vue": "^2.1.0"
+    "vue": "^2.1.0",
+    "vue-material": "^0.6.3"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
